Fix's (#66)
- Added scrollbar to sidebar when it overflows
- Clarified Private Materials are not able to be published and this is intentional
- Expanded Number of Modules on a Page (there is probs a better way to do do this and make it more dynamic but we don't have time)

--- a/static/base.css
+++ b/static/base.css
@@ -11,6 +11,7 @@ body {
 
 .sidenav {
     background: var(--bg-black);
+    overflow-y:auto;
     color: var(--bg-light);
     padding: 24px 16px;
     display: flex;
